--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bincode = "1.2.1"
+regex = "1.7.1"
 serde = { version = "1.0.151", features = ["derive"] }
 thiserror = "1.0.24"
 tokio = "1.24.1"
