--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ base64 = "0.21.0"
 bincode = "1.2.1"
 chrono = "0.4.23"
 clap = " 4.1.4"
+lazy_static = "1.4.0"
 regex = { version = "1.3.1", default-features = false, features = ["std"] }
 same-file = "1.0.6"
 serde = { version = "1.0.151", default-features = false, features = ["derive"] }
