--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,13 @@ base64 = "0.21.0"
 bincode = "1.2.1"
 chrono = "0.4.23"
 clap = " 4.1.4"
+dialoguer = "0.10.3"
 lazy_static = "1.4.0"
 regex = { version = "1.3.1", default-features = false, features = ["std"] }
 same-file = "1.0.6"
 serde = { version = "1.0.151", default-features = false, features = ["derive"] }
 serde_json = "1.0.91"
+termion = "2.0.1"
 thiserror = "1.0.24"
 toml = "0.5.10"
 
