--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 base64 = "0.21.0"
 bincode = "1.2.1"
 chrono = "0.4.23"
-clap = " 4.1.4"
+clap = { version = "4.1.4", default-features = false, features = ["std"] }
 colored = "2.0.0"
 lazy_static = "1.4.0"
 regex = { version = "1.3.1", default-features = false, features = ["std"] }
