--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
 base64 = "0.21.0"
 bincode = "1.2.1"
 chrono = "0.4.23"
-clap = { version = "4.1.4", default-features = false, features = ["std"] }
+clap = { version = "4.1.0", default-features = false, features = ["std","help"]}
 colored = "2.0.0"
 lazy_static = "1.4.0"
 regex = { version = "1.3.1", default-features = false, features = ["std"] }
