--- a/config/server.toml
+++ b/config/server.toml
@@ -3,7 +3,7 @@ ip = "127.0.0.1"
 port = "11451"
 data_path = "./data/"
 timeout = 300
-repl = false
+repl = true
 local_user = "root@123456"
 default_db = "default.data"
-auto_fresh = 1
+auto_fresh = 20
