--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rdb"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/MAKIROR/ROR-KvDB"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
