--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rdb"
 version = "0.1.0"
 edition = "2021"
+authors = ["MAKIROR <gzanan@gmail.com>"]
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/MAKIROR/ROR-KvDB"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
